--- a/enemy/index.html
+++ b/enemy/index.html
@@ -237,7 +237,7 @@ function generateHostile() {
       break;
 
     case "vindicator":
-      cmd = `execute at @p run summon vindicator ~ ~2 ~${dist} {CustomName:'{"text":"{nickname}"}',PersistenceRequired:1,CustomNameVisible:1}`;
+      cmd = `execute at @p run summon vindicator ~ ~2 ~${dist} {CustomName:'{"text":"{nickname}"}',PersistenceRequired:1,CustomNameVisible:1,HandItems:[{Count:1,id:"minecraft:iron_axe"},{}]}`;
       break;
 
     case "vex":
@@ -383,6 +383,7 @@ function copyCommand(){
 
 </body>
 </html>
+
 
 
 
